# movies-ws

./: .clang-format  .gitignore  .gitmodules  BUILD.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  COMMITS.md  CPPLINT.cfg  LICENSE  README.md  conanfile.txt
.github/workflows/: build.yml  linter.yml
apps/: CMakeLists.txt
apps/docker-start/: CMakeLists.txt  main.cc
apps/movies-ws/: CMakeLists.txt
apps/movies-ws/src/: main.cc  service.cc  service.hh
apps/movies-ws/win32/: movies-ws.rc
apps/web-socket/: CMakeLists.txt  main.cc
apps/web-socket/win32/: movies-ws.rc
cmake/: base-profiles.json  matrix.json  output-dirs.cmake  plugin.cmake  prepare_pack.cmake
data/docker/: Dockerfile.in  start.sh
data/plugins/: imdb.json  tmdb.json
data/regions/: build.py  regions-patch.json  source.url
data/strings/: .gitignore  server.lngs  tags.lngs  webapp.lngs
data/templates/: cxx_rpc.mustache  proto3.mustache  typescript.mustache
data/translations/: .gitignore  llcc.txt  server.pot  tags.pot  webapp.pot
data/translations/server/: en-US.po  en.po  pl.po
data/translations/tags/: en-US.po  en.po  pl.po
data/translations/webapp/: en-US.po  en.po  pl.po
extras/: CMakeLists.txt
extras/imdb/: CMakeLists.txt  imdb.cc  imdb.hh
extras/jsapi/: .gitignore  .npmignore  package.json  proto  tsconfig.json
extras/jsapi/lib/: Event.ts  QueuedSocket.ts  WsClient.ts  filters.ts  index.ts
extras/jsapi/lib/proto/: bundle.d.ts  bundle.js
extras/jsapi/scripts/: copy.js  proto.js  yarn.py
extras/tmdb/: CMakeLists.txt  tmdb.cc  tmdb.hh
libs/: CMakeLists.txt
libs/data/: CMakeLists.txt
libs/data/proto/movie/: rpc.v1.proto
libs/data/src/ws/: protobuf.hh  ws.cc  ws.hh
libs/server/: CMakeLists.txt
libs/server/inc/base/: extended_info.hh  lngs.hh  logger.hh  overload.hh  str.hh
libs/server/inc/filters/: filter.hh
libs/server/inc/full_text/: engine.hh
libs/server/inc/server/: extended_info.hh  fs_observer.hh  plugin.hh  server.hh
libs/server/inc/sorting/: sort.hh
libs/server/inc/stats/: sqlite.hh  video_info.hh  watch_offset.hh
libs/server/src/: version.in
libs/server/src/base/: extended_info.cc  logger.cc  logger_dir.in.hh
libs/server/src/filters/: base.cc  description.cc  internal.hh  on_off.cc  on_off.hh  range.cc  term.cc  tokens.cc
libs/server/src/full_text/: engine.cc
libs/server/src/server/: fs_observer_inotify.cc  fs_observer_posix.cc  fs_observer_win32.cc  json_plugin.cc  json_plugin.hh  plugin.cc  server.cc
libs/server/src/sorting/: config.cc  sort.cc
libs/server/src/stats/: movie_table.hh  sqlite.cc  video_info.cc  watch_offset.cc
libs/server/src/utf/: utf.cc
libs/startup/: CMakeLists.txt
libs/startup/inc/: startup.hh
libs/startup/src/: startup-posix.cc  startup-win32.cc
libs/websocket/: CMakeLists.txt  appstr.cmake
libs/websocket/proto/: .gitignore
libs/websocket/proto/movies/: db.v1.proto  filters.v1.proto  info.v1.proto  listing.v1.proto  rpc.v1.proto  ui.v1.proto
libs/websocket/src/rpc/: appstr.hh  db.cc  db.hh  rpc.hh  session.hh  ui.cc  ui.hh
libs/websocket/src/ws/: protobuf.cc  protobuf.hh  session.cc  session.hh  ws.cc  ws.hh
tools/: docker-build-run  release.py
tools/docker/: run_clang_format.py  run_linter.py
